# django-royce-bulksms

./: MANIFEST.in  README.md  README.rst  setup.cfg
roycebulksms/: LICENSE  apps.py  forms.py  models.py  urls.py  views.py
roycebulksms/migrations/: 0001_initial.py  0002_contact_senttext.py  0003_auto_20220422_1827.py  0004_auto_20220422_1830.py  0005_auto_20220422_1834.py  0006_auto_20220423_2340.py  0007_auto_20220425_2230.py
roycebulksms/templates/roycebulksms/: apikey.html  base.html  contacts.html  groups.html  index.html  outbox.html  senderid.html  sendtocontacts.html  sendtogroups.html  sendtonumbers.html
