[metadata]
name = django-royce-bulksms
version = 0.3
description = A Django app to Integrate bulk sms into Django system. It also comes with UI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royceltd/django-royce-bulksms
project_urls =
    Bug Tracker = https://github.com/royceltd/django-royce-bulksms/issues
author = Royce Ltd
author_email = developer@roycetechnologies.co.ke
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.0  # Replace "X.Y" as appropriate